<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.add.AddSongFragment" >

    <data>
        <variable
            name="addSongViewModel"
            type="com.example.android.musicapplicationv2.ui.add.AddSongViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">
        <TextView
            android:theme="@style/InputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/input_height"
            android:text="@string/song_title_lbl"/>
        <EditText
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue=" "
            android:text="@={addSongViewModel.title}"/>
        <TextView
            android:theme="@style/InputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/input_height"
            android:text="@string/artist_lbl" />
        <EditText
            android:id="@+id/artist_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue=" "
            android:text="@={addSongViewModel.artist}"/>
        <TextView
            android:theme="@style/InputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/input_height"
            android:text="@string/album_lbl"/>
        <EditText
            android:id="@+id/album_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue=" "
            android:text="@={addSongViewModel.album}"/>
        <TextView
            android:theme="@style/InputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/input_height"
            android:text="@string/year_of_release_lbl"
            />
        <EditText
            android:id="@+id/year_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:defaultValue="0"
            android:text="@={``+addSongViewModel.year}"
            />
        <TextView
            android:theme="@style/InputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/input_height"
            android:text="@string/song_duration_lbl"/>
        <EditText
            android:id="@+id/duration_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:text="@={addSongViewModel.duration}"/>

        <Button
            android:id="@+id/add_song_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/save_song_btn"
            android:layout_marginTop="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>
</layout>